--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -3,5 +3,5 @@ Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.25
 Werkzeug==2.0.1
 pandas==1.2.3
-psycopg2==2.9.1
+psycopg2-binary==2.9.1
 Flask-Login==0.4.1
